modify bool , for showing the board

--- a/template/common/board.htm
+++ b/template/common/board.htm
@@ -16,5 +16,5 @@
   <br />
   <br />
   </div>
-  <a class="btn btn-primary center-block" href="index.php?visit=1&uid={$uid}">同意</a>
+  <a class="btn btn-primary center-block" href="index.php?uid={$uid}">同意</a>
 </div>
