--- a/zcbox/template/tip/list.htm
+++ b/zcbox/template/tip/list.htm
@@ -32,6 +32,7 @@
 		    {$tip_user['name']}
 		    <!--{if $tip['rewarded']}-->
 		    <span class="glyphicon glyphicon-ok" style="color:#228B22;"></span>
+			<div id="rewarded-money">$tip['money']元</div> 
 		    <!--{/if}-->
 			<div class="clearfix"></div>
 			<span class="pull-right status">
